<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5CFB5"
        android:fitsSystemWindows="false"
        android:padding="5dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

<!--            <EditText-->
<!--                android:id="@+id/search_view"-->
<!--                android:layout_width="288dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints="@string/search_by_description"-->
<!--                android:background="@color/white"-->
<!--                android:hint="@string/search_by_description"-->
<!--                android:inputType="text"-->
<!--                android:padding="5dp" />-->

            <SearchView
                    android:id="@+id/search_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:queryHint="@string/search_by_description"
                    android:iconifiedByDefault="false"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp" />
            <Button
                android:id="@id/expand_search_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@android:drawable/ic_menu_more"
                android:backgroundTint="#000000"
                android:padding="30dp" />
        </LinearLayout>
        <RelativeLayout
                android:id="@+id/expanded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A5CFB5"
                app:layout_anchor="@id/top"
                app:layout_anchorGravity="bottom"
                android:layout_gravity="bottom"
                android:padding="10dp"
                android:visibility="gone">
            <TextView
                    android:id="@+id/sort_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by">
            </TextView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sort_by"
                    android:orientation="horizontal">
                
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sort_date"
                        android:textSize="12sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Date"
                        style="@style/BubbleButtonStyle"/>
                
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sort_description"
                        android:textSize="12sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description"
                        style="@style/BubbleButtonStyle"/>
                
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sort_make"
                        android:textSize="12sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Make"
                        style="@style/BubbleButtonStyle"/>
                
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sort_value"
                        android:textSize="12sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/value"
                        style="@style/BubbleButtonStyle"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/filter_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sort_by"
                    android:layout_marginTop="45dp"
                    android:text="@string/filter_by">
            </TextView>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filter_by"
                    android:orientation="horizontal">
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date">
                </TextView>
                
                <EditText
                        android:id="@+id/edit_text_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:padding="5dp"
                        android:inputType="date|datetime"
                        android:autofillHints="dd-mm-yyyy"/>
                
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/end_date">
                
                </TextView>
                
                <EditText
                        android:id="@+id/edit_text_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:padding="5dp"
                        android:autofillHints="dd-mm-yyyy"
                        android:inputType="date|datetime"/>
            </LinearLayout>
            <SearchView
                    android:id="@+id/search_view_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filter_by"
                    android:layout_marginTop="45dp"
                    android:layout_centerHorizontal="true"
                    android:queryHint="Search by make"
                    android:iconifiedByDefault="false"
                    android:background="@color/white"
                    android:padding="5dp"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/top_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5CFB5"
        android:visibility="gone"
        android:padding="10dp">
        <Button
            android:id="@+id/top_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/homeAsUpIndicator"
            android:backgroundTint="#FFFFFF">

        </Button>
    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:layout_gravity="top"
        android:choiceMode="multipleChoice"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A5CFB5"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="0dp"
            android:text="@string/estimated_value"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/estimated_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:layout_toEndOf="@id/ev"
            android:layout_centerVertical="true"
            android:text="@string/_0_00">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="16dp"
                android:tint="@color/black"
                app:backgroundTint="#2D7038"
                app:rippleColor="#A5CFB5"
                app:srcCompat="@android:drawable/ic_input_add"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
            android:visibility="visible"
            android:contentDescription="@string/add_item"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="top|end"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/delete_item"
            android:padding="15dp"
            android:tint="@color/black"
            android:visibility="gone"
            app:backgroundTint="#2D7038"
            app:layout_anchor="@id/fab"
            app:layout_anchorGravity="top"
            app:rippleColor="#A5CFB5"
            app:srcCompat="@android:drawable/ic_menu_delete" />


    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>