...
            android:layout_marginTop="43dp"
            android:text="@string/Description"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:layout_below="@id/buttons"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/description"
...
            android:layout_marginTop="15dp"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/price"
                android:hint="@string/price_in_cad"
...
            android:layout_marginTop="15dp"
            android:text="@string/serial_number"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/serial"
                android:hint="Serial Number"
...
            android:layout_marginTop="15dp"
            android:text="@string/date_purchased"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_edit_serial"
                android:layout_marginTop="-8dp"
                android:layout_toEndOf="@id/date"
                android:inputType="date|datetime"
...
            android:layout_marginTop="15dp"
            android:text="@string/make"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/make"
                android:hint="Make"
...
            android:layout_marginTop="15dp"
            android:text="@string/model"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
                android:id="@+id/add_edit_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/make"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/model"
                android:hint="Model"
...
            android:layout_marginTop="15dp"
            android:text="@string/comment"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_edit_comment"
            android:layout_width="354dp"
            android:layout_height="63dp"
            android:layout_below="@id/comment"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
...
            />

    </RelativeLayout>

    <Button

        android:id="@+id/add_edit_check"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/check_mark"
        android:text="@string/text" />
...
