...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/photo"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingTop="3dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
...
